@@ -1,5 +1,8 @@
 package shop.freenanum.trade.controller;
 
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -11,6 +14,7 @@ import shop.freenanum.trade.pattern.proxy.Pagination;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @RequestMapping("/api/search")
@@ -25,27 +29,27 @@ public class SearchController {
     public String searchProducts(@RequestParam String locationInput,
                                  @RequestParam String productInput) throws UnsupportedEncodingException {
         System.out.println("locationInput = " + locationInput + ", productInput = " + productInput);
-        return "redirect:/api/search/products/1" + "?locationInput=" + URLEncoder.encode(locationInput, "UTF-8")
-                + "&productInput=" + URLEncoder.encode(productInput, "UTF-8");
+        return "redirect:/api/search/products/1" + "?locationInput=" + URLEncoder.encode(locationInput, StandardCharsets.UTF_8)
+                + "&productInput=" + URLEncoder.encode(productInput, StandardCharsets.UTF_8);
     }
 
     @GetMapping("/products/{pageNo}")
     public String searchProducts(@PathVariable Long pageNo,
                                  @RequestParam String locationInput,
                                  @RequestParam String productInput,
-                                 Model model) {
-        System.out.println("pageNo = " + pageNo + ", locationInput = " + locationInput + ", productInput = " + productInput + ", model = " + model);
-
+                                 Model model,
+                                 HttpServletResponse response) {
         List<ProductModel> productList = productRepository.search(pageNo, locationInput, productInput).stream()
                 .map(ProductModel::toModel)
                 .peek(productModel -> {
                     productModel.setImgUrl(productImageRepository.getOneById(productModel.getId()));
-                    // productModel을 반환
                 })
                 .toList();
-        System.out.println("productList: " + productList);
+
         model.addAttribute("products", productList);
-//        model.addAttribute("pagination", new Pagination(pageNo, productRepository.searchCount(locationInput, productInput)));
+        model.addAttribute("pagination", new Pagination(pageNo, productRepository.searchCount(locationInput, productInput)));
+        model.addAttribute("location", locationInput);
+        model.addAttribute("product", productInput);
 
         return "/products/searchList";
     }
